fix web body z-index

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -3,6 +3,7 @@ body {
 	background-color: #ffffff;
 	min-width: 100%;
 	min-height: 100%;
+	z-index: -1;
 }
 
 body .login-view {
